--- a/src/scss/central-content.scss
+++ b/src/scss/central-content.scss
@@ -8,7 +8,6 @@
   display: flex;
   flex-direction: column;
   max-width: 1120px;
-  margin-left: 30px;
 }
 .content-header {
   font-family: "TT Lakes", sans-serif;
@@ -30,6 +29,7 @@
   gap: 16px;
 }
 .make_ticket {
+  font-family: "TT Lakes", sans-serif;
   display: none;
   color: $textColor;
   font-weight: 600;
@@ -37,6 +37,7 @@
   white-space: nowrap;
 }
 .check_status {
+  font-family: "TT Lakes", sans-serif;
   display: none;
   color: $textColor;
   font-weight: 600;
