--- a/src/scss/central-content.scss
+++ b/src/scss/central-content.scss
@@ -8,6 +8,7 @@
   display: flex;
   flex-direction: column;
   max-width: 1120px;
+  overflow-x: hidden;
 }
 .content-header {
   font-family: "TT Lakes", sans-serif;
