--- a/src/scss/side-content.scss
+++ b/src/scss/side-content.scss
@@ -12,6 +12,10 @@
   left: 0px;
   opacity: 1;
   z-index: 3;
+  height: 100%;
+  @media screen and (max-width: 767px) {
+    overflow-y: scroll;
+  }
   @media screen and (min-width: 1440px) {
     box-shadow: none;
     position: static;
