--- a/src/scss/brands.scss
+++ b/src/scss/brands.scss
@@ -38,6 +38,7 @@
     height: 72px;
     max-height: 74px;
     margin-left: 16px;
+    padding-left: 16px;
     @media screen and (max-width: 767px) {
       margin-left: 0px;
       height: 130px;
