--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -1,4 +1,5 @@
 @import "variables";
+@import "../../node_modules/normalize.css/normalize.css";
 @import 'global';
 @import 'callback';
 @import 'feedback';
