--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -14,6 +14,6 @@
 @import 'central-content';
 @import 'swiper';
 @import 'links';
-@import '../fonts/TTLakes/stylesheet.css';
+@import 'fonts';
 @import '../../node_modules/swiper/swiper-bundle.css';
 
