--- a/style.css
+++ b/style.css
@@ -348,71 +348,6 @@ template {
   display: none;
 }
 
-@font-face {
-    font-family: 'TT Lakes';
-    src: url(./fonts/TTLakes-Italic.eot);
-    src: local('TT Lakes Italic'), local('TTLakes-Italic'),
-    url(./fonts/TTLakes-Italic.eot?#iefix) format('embedded-opentype'),
-    url(./fonts/TTLakes-Italic.woff) format('woff'),
-    url(./fonts/TTLakes-Italic.ttf) format('truetype');
-    font-weight: normal;
-    font-style: italic;
-}
-
-@font-face {
-    font-family: 'TT Lakes';
-    src: url(./fonts/TTLakes-Regular.eot);
-    src: local('TT Lakes Regular'), local('TTLakes-Regular'),
-    url(./fonts/TTLakes-Regular.eot?#iefix) format('embedded-opentype'),
-    url(./fonts/TTLakes-Regular.woff) format('woff'),
-    url(./fonts/TTLakes-Regular.ttf) format('truetype');
-    font-weight: normal;
-    font-style: normal;
-}
-
-@font-face {
-    font-family: 'TT Lakes';
-    src: url(./fonts/TTLakes-MediumItalic.eot);
-    src: local('TT Lakes Medium Italic'), local('TTLakes-MediumItalic'),
-    url(./fonts/TTLakes-MediumItalic.eot?#iefix) format('embedded-opentype'),
-    url(./fonts/TTLakes-MediumItalic.woff) format('woff'),
-    url(./fonts/TTLakes-MediumItalic.ttf) format('truetype');
-    font-weight: 500;
-    font-style: italic;
-}
-
-@font-face {
-    font-family: 'TT Lakes';
-    src: url(./fonts/TTLakes-Medium.eot);
-    src: local('TT Lakes Medium'), local('TTLakes-Medium'),
-    url(./fonts/TTLakes-Medium.eot?#iefix) format('embedded-opentype'),
-    url(./fonts/TTLakes-Medium.woff) format('woff'),
-    url(./fonts/TTLakes-Medium.ttf) format('truetype');
-    font-weight: 500;
-    font-style: normal;
-}
-
-@font-face {
-    font-family: 'TT Lakes';
-    src: url(./fonts/TTLakes-BoldItalic.eot);
-    src: local('TT Lakes Bold Italic'), local('TTLakes-BoldItalic'),
-    url(./fonts/TTLakes-BoldItalic.eot?#iefix) format('embedded-opentype'),
-    url(./fonts/TTLakes-BoldItalic.woff) format('woff'),
-    url(./fonts/TTLakes-BoldItalic.ttf) format('truetype');
-    font-weight: bold;
-    font-style: italic;
-}
-
-@font-face {
-    font-family: 'TT Lakes';
-    src: url(./fonts/TTLakes-Bold.eot);
-    src: local('TT Lakes Bold'), local('TTLakes-Bold'),
-    url(./fonts/TTLakes-Bold.eot?#iefix) format('embedded-opentype'),
-    url(./fonts/TTLakes-Bold.woff) format('woff'),
-    url(./fonts/TTLakes-Bold.ttf) format('truetype');
-    font-weight: bold;
-    font-style: normal;
-}
 /**
  * Swiper 8.4.6
  * Most modern mobile touch slider and framework with hardware accelerated transitions
@@ -2325,6 +2260,48 @@ input:checked + .lang-text {
     @media screen and (min-width: 768px) and (max-width: 1439px) {
       .links .item-profile {
         display: block; } }
+
+@font-face {
+  font-family: 'TT Lakes';
+  src: url(./fonts/TTLakes-Italic.eot);
+  src: local("TT Lakes Italic"), local("TTLakes-Italic"), url(./fonts/TTLakes-Italic.eot?#iefix) format("embedded-opentype"), url(./fonts/TTLakes-Italic.woff) format("woff"), url(./fonts/TTLakes-Italic.ttf) format("truetype");
+  font-weight: normal;
+  font-style: italic; }
+
+@font-face {
+  font-family: 'TT Lakes';
+  src: url(./fonts/TTLakes-Regular.eot);
+  src: local("TT Lakes Regular"), local("TTLakes-Regular"), url(./fonts/TTLakes-Regular.eot?#iefix) format("embedded-opentype"), url(./fonts/TTLakes-Regular.woff) format("woff"), url(./fonts/TTLakes-Regular.ttf) format("truetype");
+  font-weight: normal;
+  font-style: normal; }
+
+@font-face {
+  font-family: 'TT Lakes';
+  src: url(./fonts/TTLakes-MediumItalic.eot);
+  src: local("TT Lakes Medium Italic"), local("TTLakes-MediumItalic"), url(./fonts/TTLakes-MediumItalic.eot?#iefix) format("embedded-opentype"), url(./fonts/TTLakes-MediumItalic.woff) format("woff"), url(./fonts/TTLakes-MediumItalic.ttf) format("truetype");
+  font-weight: 500;
+  font-style: italic; }
+
+@font-face {
+  font-family: 'TT Lakes';
+  src: url(./fonts/TTLakes-Medium.eot);
+  src: local("TT Lakes Medium"), local("TTLakes-Medium"), url(./fonts/TTLakes-Medium.eot?#iefix) format("embedded-opentype"), url(./fonts/TTLakes-Medium.woff) format("woff"), url(./fonts/TTLakes-Medium.ttf) format("truetype");
+  font-weight: 500;
+  font-style: normal; }
+
+@font-face {
+  font-family: 'TT Lakes';
+  src: url(./fonts/TTLakes-BoldItalic.eot);
+  src: local("TT Lakes Bold Italic"), local("TTLakes-BoldItalic"), url(./fonts/TTLakes-BoldItalic.eot?#iefix) format("embedded-opentype"), url(./fonts/TTLakes-BoldItalic.woff) format("woff"), url(./fonts/TTLakes-BoldItalic.ttf) format("truetype");
+  font-weight: bold;
+  font-style: italic; }
+
+@font-face {
+  font-family: 'TT Lakes';
+  src: url(./fonts/TTLakes-Bold.eot);
+  src: local("TT Lakes Bold"), local("TTLakes-Bold"), url(./fonts/TTLakes-Bold.eot?#iefix) format("embedded-opentype"), url(./fonts/TTLakes-Bold.woff) format("woff"), url(./fonts/TTLakes-Bold.ttf) format("truetype");
+  font-weight: bold;
+  font-style: normal; }
 
 
 /*# sourceMappingURL=style.css.map*/
