--- a/src/scss/brands.scss
+++ b/src/scss/brands.scss
@@ -37,7 +37,7 @@
     min-width: 220px;
     height: 72px;
     max-height: 74px;
-    padding-left: 16px;
+    margin-left: 16px;
     @media screen and (max-width: 767px) {
       margin-left: 0px;
       height: 130px;
