--- a/src/scss/feedback.scss
+++ b/src/scss/feedback.scss
@@ -11,6 +11,7 @@
   height: 100vh;
   padding-right: 32px;
   padding-top: 32px;
+  overflow-y: scroll;
   @media screen and (max-width: 767px) {
     max-width: 100vw;
   }
