--- a/style.css
+++ b/style.css
@@ -1063,7 +1063,8 @@ html {
   opacity: 1;
   height: 100vh;
   padding-right: 32px;
-  padding-top: 32px; }
+  padding-top: 32px;
+  overflow-y: scroll; }
   @media screen and (max-width: 767px) {
     .callback {
       max-width: 100vw; } }
@@ -1143,7 +1144,8 @@ html {
   opacity: 1;
   height: 100vh;
   padding-right: 32px;
-  padding-top: 32px; }
+  padding-top: 32px;
+  overflow-y: scroll; }
   @media screen and (max-width: 767px) {
     .feedback {
       max-width: 100vw; } }
