--- a/src/scss/callback.scss
+++ b/src/scss/callback.scss
@@ -11,7 +11,9 @@
   height: 100vh;
   padding-right: 32px;
   padding-top: 32px;
-  overflow-y: scroll;
+  @media screen and (max-height: 767px) {
+    overflow-y: scroll;
+  }
   @media screen and (max-width: 767px) {
     max-width: 100vw;
   }
