--- a/style.css
+++ b/style.css
@@ -1063,8 +1063,10 @@ html {
   opacity: 1;
   height: 100vh;
   padding-right: 32px;
-  padding-top: 32px;
-  overflow-y: scroll; }
+  padding-top: 32px; }
+  @media screen and (max-height: 767px) {
+    .callback {
+      overflow-y: scroll; } }
   @media screen and (max-width: 767px) {
     .callback {
       max-width: 100vw; } }
@@ -1144,8 +1146,10 @@ html {
   opacity: 1;
   height: 100vh;
   padding-right: 32px;
-  padding-top: 32px;
-  overflow-y: scroll; }
+  padding-top: 32px; }
+  @media screen and (max-height: 767px) {
+    .feedback {
+      overflow-y: scroll; } }
   @media screen and (max-width: 767px) {
     .feedback {
       max-width: 100vw; } }
@@ -1791,8 +1795,10 @@ html {
   left: 0px;
   opacity: 1;
   z-index: 3;
-  height: 100%;
-  overflow-y: scroll; }
+  height: 100%; }
+  @media screen and (max-height: 767px) {
+    .side-content {
+      overflow-y: scroll; } }
   @media screen and (min-width: 1440px) {
     .side-content {
       box-shadow: none;
