--- a/src/scss/info.scss
+++ b/src/scss/info.scss
@@ -6,6 +6,7 @@
   padding-top: 16px;
   padding-bottom: 19px;
   text-align: center;
+  background: $white;
   @media screen and (max-width: 767px) {
     flex-direction: column;
   }
