--- a/src/scss/prices.scss
+++ b/src/scss/prices.scss
@@ -3,6 +3,7 @@
   min-width: 320px;
   border-bottom: 1px solid $titleBorder;
   padding-bottom: 40px;
+  background: $white;
   &__header {
     padding: 0;
     margin: 0;
@@ -84,6 +85,8 @@
   &__card {
     display: flex;
     align-items: center;
+    height: 64px;
+    border-bottom: 2px solid $cardBorder;
     @media screen and (max-width: 767px) {
       flex-direction: column;
       max-width: 226px;
