--- a/src/scss/services.scss
+++ b/src/scss/services.scss
@@ -11,6 +11,7 @@
   scrollbar-width: none;
   overflow-y: scroll;
   margin-bottom: 0px;
+  background: $white;
   &__button {
     height: 23px;
     flex-shrink: 0;
