--- a/src/scss/callback.scss
+++ b/src/scss/callback.scss
@@ -52,6 +52,9 @@
     color: $paginationActive;
     box-shadow: none;
     outline: none !important;
+    &::placeholder {
+      color: $textGray;
+    }
   }
   &__title {
     font-size: 24px;
