--- a/src/scss/central-content.scss
+++ b/src/scss/central-content.scss
@@ -9,6 +9,7 @@
   flex-direction: column;
   max-width: 1120px;
   overflow-x: hidden;
+  background: $white;
 }
 .content-header {
   font-family: "TT Lakes", sans-serif;
