--- a/src/scss/feedback.scss
+++ b/src/scss/feedback.scss
@@ -49,9 +49,12 @@
     font-size: 16px;
     line-height: 24px;
     font-weight: 400;
-    color: $paginationActive;
+    color: $textColor;
     box-shadow: none;
     outline: none !important;
+    &::placeholder {
+      color: $textGray;
+    }
   }
   &__textarea {
     height: 118px;
