--- a/src/scss/links.scss
+++ b/src/scss/links.scss
@@ -5,6 +5,7 @@
   align-items: center;
   justify-content: space-between;
   height: 88px;
+  background: $white;
   @media screen and (min-width: 768px) and (max-width: 1439px) {
     margin: 0;
     justify-content: space-between;
