--- a/src/scss/technics.scss
+++ b/src/scss/technics.scss
@@ -4,6 +4,7 @@
   padding: 0;
   padding-bottom: 50px;
   max-width: 1120px;
+  background: $white;
   @media screen and (max-width: 767px) {
     padding-bottom: 0px;
   }
