--- a/src/scss/brands.scss
+++ b/src/scss/brands.scss
@@ -1,4 +1,5 @@
 @import 'invisible';
+@import "variables";
 .brands {
   font-family: "TT Lakes", sans-serif;
   margin: 0;
@@ -23,6 +24,7 @@
     border-color: $titleBorder;
     border-radius: 1px;
     width: auto;
+    background: linear-gradient(270deg, $mainBackground 0%, $white 98.61%);
   }
 
   &__main {
