--- a/style.css
+++ b/style.css
@@ -1236,11 +1236,15 @@ html {
   background: #ffffff; }
   .prices__header {
     padding: 0;
-    margin: 0; }
+    margin: 0;
+    background: linear-gradient(270deg, #f8f8f8 0%, #ffffff 98.61%); }
   .prices__main {
     margin-bottom: 24px; }
   .prices__cards {
-    margin-bottom: 16px; }
+    margin-bottom: 16px;
+    background: #ffffff; }
+    .prices__cards.swiper-wrapper {
+      gap: 0px; }
   .prices__list {
     display: flex;
     flex-direction: column;
@@ -1306,6 +1310,8 @@ html {
     align-items: center;
     height: 64px;
     border-bottom: 2px solid #eaeaea; }
+    .prices__card:last-child {
+      border-bottom: none; }
     @media screen and (max-width: 767px) {
       .prices__card {
         flex-direction: column;
@@ -1345,14 +1351,23 @@ html {
     text-transform: uppercase;
     display: flex;
     align-items: center;
-    align-self: flex-end;
     margin: auto 0;
+    margin-left: auto;
     max-width: 119px;
-    max-height: 32px; }
+    max-height: 32px;
+    /*&-pic:after {
+      //<img src="./img/ic/goside.svg" alt="go">
+      content: "";
+
+    }*/ }
     @media screen and (max-width: 767px) {
       .prices__order {
         position: absolute;
         bottom: 20px; } }
+    .prices__order-pic {
+      width: 24px;
+      height: 24px;
+      content: url(./static/goside.svg); }
   .prices__column4 {
     background: url(./static/goside.svg) no-repeat;
     border: none;
@@ -1386,6 +1401,8 @@ html {
   @media screen and (max-width: 767px) {
     .technics {
       padding-bottom: 0px; } }
+  .technics__header {
+    background: linear-gradient(270deg, #f8f8f8 0%, #ffffff 98.61%); }
   .technics__content {
     display: flex;
     text-decoration: none;
@@ -1458,7 +1475,8 @@ html {
     border-width: 1px 0 0 0;
     border-color: #d9fff5;
     border-radius: 1px;
-    width: auto; }
+    width: auto;
+    background: linear-gradient(270deg, #f8f8f8 0%, #ffffff 98.61%); }
   .brands__main {
     margin-bottom: 48px; }
     @media screen and (max-width: 767px) {
@@ -1825,7 +1843,8 @@ html {
   @media screen and (min-width: 1440px) {
     .side-content {
       box-shadow: none;
-      position: static; } }
+      position: static;
+      background: #f8f8f8; } }
   .side-content__header {
     display: flex;
     align-items: center;
@@ -2134,7 +2153,7 @@ input:checked + .lang-text {
   flex-direction: column;
   max-width: 1120px;
   overflow-x: hidden;
-  background: #ffffff; }
+  background: #f8f8f8; }
 
 .content-header {
   font-family: "TT Lakes", sans-serif;
