--- a/src/scss/callback.scss
+++ b/src/scss/callback.scss
@@ -11,6 +11,9 @@
   height: 100vh;
   padding-right: 32px;
   padding-top: 32px;
+  min-width: 119px;
+  min-height: 32px;
+  background: url("../img/order.svg") no-repeat;
   @media screen and (max-height: 767px) {
     overflow-y: scroll;
   }
