--- a/style.css
+++ b/style.css
@@ -1063,7 +1063,10 @@ html {
   opacity: 1;
   height: 100vh;
   padding-right: 32px;
-  padding-top: 32px; }
+  padding-top: 32px;
+  min-width: 119px;
+  min-height: 32px;
+  background: url(./static/order.svg) no-repeat; }
   @media screen and (max-height: 767px) {
     .callback {
       overflow-y: scroll; } }
@@ -1218,8 +1221,9 @@ html {
     align-items: center;
     align-self: flex-end;
     margin: auto 0;
-    max-width: 119px;
-    max-height: 32px; }
+    min-width: 119px;
+    min-height: 32px;
+    background: url(./static/order.svg) no-repeat; }
   .feedback__icon {
     background: url(./static/goside.svg) no-repeat;
     border: none;
@@ -1341,7 +1345,6 @@ html {
           flex-basis: 15%; } }
   .prices__order {
     padding: 8px 12px;
-    background: #FF3E79;
     border: none;
     border-radius: 16px;
     font-family: 'TT Lakes';
@@ -1353,8 +1356,14 @@ html {
     align-items: center;
     margin: auto 0;
     margin-left: auto;
-    max-width: 119px;
-    max-height: 32px;
+    min-width: 119px;
+    min-height: 32px;
+    background: url(./static/order.svg) no-repeat;
+    /*&-pic {
+      width: 24px;
+      height: 24px;
+      content: url("../img/ic/goside.svg");
+    }*/
     /*&-pic:after {
       //<img src="./img/ic/goside.svg" alt="go">
       content: "";
@@ -1364,10 +1373,6 @@ html {
       .prices__order {
         position: absolute;
         bottom: 20px; } }
-    .prices__order-pic {
-      width: 24px;
-      height: 24px;
-      content: url(./static/goside.svg); }
   .prices__column4 {
     background: url(./static/goside.svg) no-repeat;
     border: none;
