--- a/src/scss/callback.scss
+++ b/src/scss/callback.scss
@@ -13,7 +13,6 @@
   padding-top: 32px;
   min-width: 119px;
   min-height: 32px;
-  background: url("../img/order.svg") no-repeat;
   @media screen and (max-height: 767px) {
     overflow-y: scroll;
   }
@@ -76,8 +75,9 @@
     align-items: center;
     align-self: flex-end;
     margin: auto 0;
-    max-width: 119px;
-    max-height: 32px;
+    min-width: 119px;
+    min-height: 32px;
+    background: url("../img/order.svg") no-repeat;
   }
   &__icon {
     background: url('../img/ic/goside.svg') no-repeat;
