--- a/style.css
+++ b/style.css
@@ -1065,8 +1065,7 @@ html {
   padding-right: 32px;
   padding-top: 32px;
   min-width: 119px;
-  min-height: 32px;
-  background: url(./static/order.svg) no-repeat; }
+  min-height: 32px; }
   @media screen and (max-height: 767px) {
     .callback {
       overflow-y: scroll; } }
@@ -1128,8 +1127,9 @@ html {
     align-items: center;
     align-self: flex-end;
     margin: auto 0;
-    max-width: 119px;
-    max-height: 32px; }
+    min-width: 119px;
+    min-height: 32px;
+    background: url(./static/order.svg) no-repeat; }
   .callback__icon {
     background: url(./static/goside.svg) no-repeat;
     border: none;
